@@ -2,6 +2,10 @@
 
 	* gtk/gtkstatusbar.c (gtk_statusbar_init): Raise the grip
 	window when appropriate.
+	(gtk_statusbar_init): Instead of cutting the text of, make
+	ellipsize the label.
+	(gtk_statusbar_size_allocate): Don't let the label extend
+	under the resize grip.
 
 	* gtk/gtkcombobox.c (find_menu_by_path) 
 	(gtk_combo_box_menu_fill_level, gtk_combo_box_menu_row_inserted): 
